Updated paymentInfo api

--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -34,7 +34,7 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>Find Treatment</a>
             </li>
             <li>
-              <a href="http://www.addictionnetwork.com/privacypolicy/">
+              <a href="javascript:;" ng-click="$ctrl.gotoPrivacyPolicy();">
                 <span class="glyphicon glyphicon-chevron-right"></span>Privacy Policy</a>
             </li>
           </ul>
