--- a/app/signUp/payment/view.html
+++ b/app/signUp/payment/view.html
@@ -48,34 +48,33 @@
           </div>
 
           <div class="form-group">
-            <input type="text" class="form-control" id="cardName" name="cardName" placeholder="Name as seen on card"  ng-model="$ctrl.cardName" required>
+            <input type="text" class="form-control" id="cardName" name="cardName" placeholder="Name as seen on card" ng-model="$ctrl.cardName" required>
           </div>
 
           <!-- <div class="form-group">
             <input type="text" class="form-control" name="cardNumber" id="cardNumber" placeholder="Card number" ng-model="$ctrl.cardNumber" required>
           </div> -->
           <div class="form-group">
-            <input placeholder="Card Number" style="float: left;" class="form-control" type="text" ng-keyup="$ctrl.detectCardType($ctrl.cardNumber, $event)" ng-change="" ng-maxlength="19" ng-model="$ctrl.cardNumber" ng-pattern="/^[0-9' ']+$/" required="" name="cardNumber" maxlength="19" autocomplete="off">
+            <input placeholder="Card Number" style="float: left; margin-bottom: 20px;" class="form-control" type="text" ng-keyup="$ctrl.detectCardType($ctrl.cardNumber, $event)" ng-change="" ng-maxlength="19" ng-model="$ctrl.cardNumber" ng-pattern="/^[0-9' ']+$/" required="" name="cardNumber" maxlength="19" autocomplete="off">
             <i style="font-size: 40px; margin-top: -10px; color: #58aa22; position: absolute; margin-left: -43px;" class="icon large icon-{{$ctrl.cardType}}-card"></i>
           </div>
-
           <div class="form-group">
             <input type="text" class="form-control" name="expiry" id="expiry" placeholder="Expiry date(MM/YYYY)" ng-model="$ctrl.expiry" required>
           </div>
 
           <div class="form-group">
-            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" required  number="true">
+            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" required number="true">
           </div>
 
           <div class="form-group">
-            <input type="text" name="address" ng-model="$ctrl.address" class="form-control" id="address"  placeholder="Address" required>
+            <input type="text" name="address" ng-model="$ctrl.address" class="form-control" id="address" placeholder="Address" required>
           </div>
           <div class="form-group">
-            <input type="text" name="state" ng-model="$ctrl.state" class="form-control" id="state"  placeholder="State" required>
+            <input type="text" name="state" ng-model="$ctrl.state" class="form-control" id="state" placeholder="State" required>
           </div>
 
           <div class="form-group">
-            <input type="text" name="city" class="form-control" id="city" placeholder="City" ng-model="$ctrl.city"  required>
+            <input type="text" name="city" class="form-control" id="city" placeholder="City" ng-model="$ctrl.city" required>
           </div>
 
           <div class="form-group">
