Updated sponsored page

--- a/app/signUp/cartDetail/view.html
+++ b/app/signUp/cartDetail/view.html
@@ -1,5 +1,6 @@
 <!-- {{$root.cityModel}} {{$root.countyModel}} -->
-<div class="container">
+<br><br><br><br><br><br>
+<!-- <div class="container">
   <div class="row">
     <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;">
       <div class="col-sm-12 steps_sponsored step3">Step 3: Confirm or Edit your selected options to advertise</div>
@@ -14,17 +15,12 @@
           <h5>
             <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
         </div>
-        <!-- <div class="col-xs-6">
-        <button type="button" ng-click="$ctrl.continueShop()" class="btn btn-primary btn-sm btn-block">
-          <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
-        </button>
-      </div> -->
+
       </div>
     </div>
   </div>
-</div>
-
-<!-- {{$root.treatmentCentersModel}} -->
+</div> -->
+<!--
 <table class="responstable" ng-repeat="center in $ctrl.treatmentCenters">
   <tbody>
     <tr>
@@ -118,13 +114,7 @@
       </td>
       <td>${{$ctrl.centerWise[center.id].byDrugTotal}}</td>
     </tr>
-    <!-- <tr>
-      <td>
-        <span class="pull-left">{{$ctrl.membershipTypeText}}</span>
-      </td>
-      <td>&nbsp;</td>
-      <td>${{$ctrl.totalExtra}}</td>
-    </tr> -->
+
     <tr>
       <td colspan="3">
         <span class="pull-right">
@@ -138,4 +128,4 @@
       </td>
     </tr>
   </tbody>
-</table>
+</table> -->
