--- a/app/signUp/cartDetail/view.html
+++ b/app/signUp/cartDetail/view.html
@@ -1,6 +1,11 @@
 <!-- {{$root.cityModel}} {{$root.countyModel}} -->
-<br><br><br><br><br><br>
-<!-- <div class="container">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container" style="visibility:hidden;">
   <div class="row">
     <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;">
       <div class="col-sm-12 steps_sponsored step3">Step 3: Confirm or Edit your selected options to advertise</div>
@@ -19,9 +24,9 @@
       </div>
     </div>
   </div>
-</div> -->
-<!--
-<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters">
+</div>
+
+<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters" style="visibility:hidden;">
   <tbody>
     <tr>
       <td>
@@ -128,4 +133,4 @@
       </td>
     </tr>
   </tbody>
-</table> -->
+</table>
