--- a/app/signUp/cartDetail/view.html
+++ b/app/signUp/cartDetail/view.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-<div class="panel panel-info">
+<div class="panel panel-info" style="visibility:hidden;">
   <div class="panel-heading">
     <div class="panel-title">
       <div class="row">
