--- a/app/signUp/cartDetail/view.html
+++ b/app/signUp/cartDetail/view.html
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-<div class="panel panel-info" style="visibility:hidden;">
+<div class="panel panel-info" style="display:none;">
   <div class="panel-heading">
     <div class="panel-title">
       <div class="row">
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters" style="visibility:hidden;">
+<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters" style="display:none;">
   <tbody>
     <tr>
       <td>
