--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -34,7 +34,9 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>Find Treatment</a>
             </li>
             <li>
-              <a href="javascript:;" ng-click="$ctrl.gotoPrivacyPolicy();">
+              <!-- <a href="javascript:;" ng-click="$ctrl.gotoPrivacyPolicy();">
+                <span class="glyphicon glyphicon-chevron-right"></span>Privacy Policy</a> -->
+              <a href="javascript:;">
                 <span class="glyphicon glyphicon-chevron-right"></span>Privacy Policy</a>
             </li>
           </ul>
