--- a/app/aboutUs/view.html
+++ b/app/aboutUs/view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="About as $ctrl">
+<div class="container" ng-controller="AboutUsCtrl as $ctrl">
   <div class="row">
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
       <content></content>
