--- a/app/signUp/cartDetail/view.html
+++ b/app/signUp/cartDetail/view.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters" style="display:none;">
+<table class="responstable" ng-repeat="center in $ctrl.treatmentCenters" >
   <tbody>
     <tr>
       <td>
