--- a/app/contactCustomer/view.html
+++ b/app/contactCustomer/view.html
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
               <label for="phone">Phone:</label>
-              <input type="text" required="" class="form-control" id="phone" placeholder="Enter phone number" name="email">
+              <input type="text" required="" class="form-control" id="phone" placeholder="Enter phone number" name="phone">
             </div>
 
             <div class="form-group">
