--- a/app/signUp/testCenter/view.html
+++ b/app/signUp/testCenter/view.html
@@ -105,8 +105,8 @@
       </div>
     </div>
     <div class="col-md-12 " style="margin-top:50px;">
-      <p class="stick-next-tc"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p>
-
+      <p class="stick-next-left font-normal"><a href="javascript:void(0)" ng-click="$ctrl.skip();">Skip</a></p>
+      <p class="stick-next-right"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p>
     </div>
   </div>
   <!-- <p class="stick-next-tc"><a href="javascript:void(0)" ng-click="$ctrl.optional_fields()" ng-disabled="">Next</a></p> -->
