--- a/app/signUp/sponserPage/view.html
+++ b/app/signUp/sponserPage/view.html
@@ -29,14 +29,17 @@
         <p>
           <strong>You have now upgraded your membership.</strong>
         </p>
-        <p class="lead"><a href="javascript:void(0)" ng-click="$ctrl.add_sponsor()">Add Sponsor Pages</a></p>
-        <p>You can also choose to publish ads for your testcenter on our website to gain more visibility accross all audience.</p>
-        <p class="lead"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish my Ads</a></p>
+        <p class="lead" ng-if="$ctrl.sponsorAdded!=='1'"><a href="javascript:void(0)" ng-click="$ctrl.add_sponsor()">Add Sponsor Pages</a></p>
+        <p ng-if="$ctrl.bannerAdded!=='1'">You can also choose to publish ads for your testcenter on our website to gain more visibility accross all audience.</p>
+        <p ng-if="$ctrl.bannerAdded==='1'">Publish Ads: Done</p>
+        <p ng-if="$ctrl.sponsorAdded==='1'">Sponsor Ads: Done</p>
+        <p class="lead"  ng-if="$ctrl.bannerAdded!=='1'"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish my Ads</a></p>
       </div>
-
-
     </div>
     <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></p>
-    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Next</a></p>
+    <p class="stick-next-left font-normal" style="left:72%;"><a href="javascript:void(0)" ng-click="$ctrl.goToCart()">Go to cart</a></p>
+    <p class="stick-next-right"><a href="javascript:void(0)" ng-if="$ctrl.sponsorAdded!=='1'" ng-click="$ctrl.add_sponsor()">Next</a></p>
+    <p class="stick-next-right"><a href="javascript:void(0)" ng-if="$ctrl.bannerAdded!=='1'" ng-click="$ctrl.publish_ads()">Next</a></p>
+
   </div>
 </div>
