Changes according to docs in signup steps

--- a/app/signUp/productDetails/view.html
+++ b/app/signUp/productDetails/view.html
@@ -2,8 +2,8 @@
   <div class="progressbar">
     <div class="col-md-6 col-md-offset-6">
       <div class="progress progress-grediant">
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:15%">
-          <span class="stick-me">15%</span>
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+          <span class="stick-me">85%</span>
         </div>
       </div>
     </div>
@@ -23,7 +23,8 @@
       <div class="col-md-12">
         <div class="para-userprofile">
           <p>You have registered your treatment center with <strong >{{$ctrl.membership.package_name}}</strong> membership in Addiction network and are one step awaay from your customers</p>
-          <p class="lead" ng-if="$ctrl.cartDetails.length!==0">Please check your bill amount below</p>
+          <p class="lead" ng-if="$ctrl.cartDetails.length!==0">Please check your bill amount below </p>
+          <input type="checkbox" ng-model="$ctrl.expandAll" ng-init="$ctrl.expandAll=false" ng-click="$ctrl.expandAllFun($ctrl.expandAll);" /> Expand all
           <p class="lead" ng-if="$ctrl.cartDetails.length===0">Cart is empty</p>
         </div>
       </div>
@@ -251,6 +252,7 @@
 
     <div class="col-md-12" style="margin-top:50px;">
       <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
+      <p class="stick-next-left font-normal " style="margin-left:20%;"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish Ads</a></p>
       <p class="stick-next-left font-normal back-button"><a href="javascript:;" ng-click="$ctrl.goBack();">Back</a></p>
       <!-- <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p> -->
       <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.gotoPayment()">Next</a></p>
