--- a/app/signUp/signupCompleted/view.html
+++ b/app/signUp/signupCompleted/view.html
@@ -13,7 +13,7 @@
             </div>
       </div>
       <div class="payment-btm">
-        <p class="stick-next-left font-normal"><a href="javascript:window.history.back();" ng-click="$ctrl.close()">Close</a></p>
+        <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.close()">Close</a></p>
         <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p>
       </div>
   </div>
