--- a/app/signUp/optionalFields/view.html
+++ b/app/signUp/optionalFields/view.html
@@ -92,7 +92,7 @@
       </div>
       <ul class="stick-next-uo list-inline">
         <li>
-          <p><a href="javascript:history.go(-1);" ng-click="">Back</a></p>
+          <p><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></p>
         </li>
         <li>
           <p><a href="javascript:void(0);" ng-click="$ctrl.updateMembership()">Skip</a></p>
