--- a/app/signUp/payment/view.html
+++ b/app/signUp/payment/view.html
@@ -1,7 +1,7 @@
 <div class="container progress-content custom-payment">
   <div class="progressbar">
     <div class="col-md-6 col-md-offset-6">
-      <span class="member-cart">
+      <span class="member-cart" style="cursor:pointer;" ng-click = "$ctrl.goToCart()">
         <img src="themes/addiction/images/png/Cart-Icon.png">
       </span>
       <div class="progress progress-grediant">
@@ -87,7 +87,7 @@
         </form>
       </div>
     </div>
-    <p class="stick-next-left font-normal"><a href="javascript:window.history.back();">Back</a></p>
+    <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goToCart()">Back</a></p>
     <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.congrats()">Next</a></p>
   </div>
 </div>
