--- a/app/signUp/updateMembership/view.html
+++ b/app/signUp/updateMembership/view.html
@@ -63,8 +63,8 @@
 
           </div>
           <ul class="list-inline um-np">
-            <li><a href="javascript:window.history.back();">Back</a></li>
-            <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()">Continue <span ng-if="$ctrl.currentMembership===''">without upgrade</span><span ng-if="$ctrl.currentMembership==='sponsored'">with Gold membership</span> <span ng-if="$ctrl.currentMembership==='featured'">with Platinum membership</span> </a></li>
+            <li><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></li>
+            <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()"> <span ng-if="$ctrl.currentMembership==='' && 0">without upgrade</span> <span ng-if="$ctrl.currentMembership==='sponsored'">Continue with Gold membership</span> <span ng-if="$ctrl.currentMembership==='featured'">Continue with Platinum membership</span> </a></li>
           </ul>
     </div>
   </div>
