--- a/app/signUp/payment/view.html
+++ b/app/signUp/payment/view.html
@@ -63,7 +63,7 @@
           </div>
 
           <div class="form-group">
-            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" required number="true">
+            <input type="text" name="cvv" class="form-control" id="cvv" placeholder="Security Code" ng-model="$ctrl.cvv" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="4" required="" maxlength="4" number="true">
           </div>
 
           <div class="form-group">
