--- a/app/signUp/optionalFields/view.html
+++ b/app/signUp/optionalFields/view.html
@@ -59,8 +59,11 @@
               <!-- <input type="file" class="file"> -->
               <input name="logo" id="logo" class="file" type="file" file-model="$ctrl.logoData" onchange="angular.element(this).scope().imagePreview(this)" accept="image/*">
             </div>
-            <img id="logo_preview" width="120" name="logo_preview" />
-            <i class="fa fa-times" ng-show="$ctrl.logoPreview" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteLogo()" aria-hidden="true" tooltip-placement="right" uib-tooltip="Delete image"></i>
+            <div class="fix-pos">
+              <img id="logo_preview" width="120" name="logo_preview" />
+              <i class="fa fa-times" ng-show="$ctrl.logoPreview" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteLogo()" aria-hidden="true" tooltip-placement="right" uib-tooltip="Delete image"></i>
+            </div>
+
 
             <div class="pull-right">
               <span class="ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
@@ -81,7 +84,7 @@
           </div>
 
           <div class="form-group clear-me">
-            <div ng-repeat="(key, file) in $ctrl.multiPrvElm" style="padding-bottom:10px;">
+            <div ng-repeat="(key, file) in $ctrl.multiPrvElm" class="img-option-gallery">
               <img id="multi_preview-{{key}}" width="100" />
               <i class="fa fa-times" ng-if="$ctrl.multiPreview[key]" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteMulti(key)" aria-hidden="true" tooltip-placement="right" uib-tooltip="Delete image"></i>
 
@@ -92,7 +95,7 @@
       </div>
       <ul class="stick-next-uo list-inline">
         <li>
-          <p><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></p>
+          <p><a href="javascript:history.go(-1);" ng-click="">Back</a></p>
         </li>
         <li>
           <p><a href="javascript:void(0);" ng-click="$ctrl.updateMembership()">Skip</a></p>
