--- a/app/signUp/publishAds/view.html
+++ b/app/signUp/publishAds/view.html
@@ -33,9 +33,11 @@
               <div class="pull-left choose-file {{$ctrl.fileReqHeader}}">
                 <span>Upload <i class="fa fa-arrow-up"></i></span>
                 <!-- <input type="file" class="file"> -->
-                <input name="headerImage" id="headerImage" class="file" type="file" file-model="$ctrl.headerImage" onchange="angular.element(this).scope().uploadChange('header')" accept="image/*">
+                <input name="headerImage" id="headerImage" class="file" type="file" file-model="$ctrl.headerImage" onchange="angular.element(this).scope().uploadChange(this,'header')" accept="image/*">
+
               </div>
             </div>
+
             <div class="ads-block">
               <p>Cost: {{$ctrl.header}}</p>
               <p>Size: 544 PX x 93PX</p>
@@ -44,7 +46,10 @@
               </p>
               <span ng-show="$ctrl.publishAdsForm.weblinkHeader.$error.required && ($ctrl.adsFormInit.weblinkHeader===0)" class="help-block">Required</span>
               <span ng-show="$ctrl.publishAdsForm.weblinkHeader.$error.pattern && ($ctrl.adsFormInit.weblinkHeader===0)" class="help-block">Invalid website</span>
-
+              <br>
+              <p >
+                <img id="logo_preview_header" ng-src="{{$ctrl.preview_img.header}}" width="130" name="logo_preview" />
+              </p>
             </div>
           </div>
           <div class="form-group clear-me">
@@ -53,7 +58,7 @@
               <div class="pull-left choose-file {{$ctrl.fileReqSidebar}}">
                 <span>Upload <i class="fa fa-arrow-up"></i></span>
                 <!-- <input type="file" class="file"> -->
-                <input name="sideImage" id="sideImage" class="file" type="file" file-model="$ctrl.sideImage" onchange="angular.element(this).scope().uploadChange('sidebar')" accept="image/*">
+                <input name="sideImage" id="sideImage" class="file" type="file" file-model="$ctrl.sideImage" onchange="angular.element(this).scope().uploadChange(this,'sidebar')" accept="image/*">
               </div>
             </div>
             <div class="ads-block">
@@ -64,7 +69,10 @@
               </p>
               <span ng-show="$ctrl.publishAdsForm.weblinkSidebar.$error.required && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Required</span>
               <span ng-show="$ctrl.publishAdsForm.weblinkSidebar.$error.pattern && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Invalid website</span>
-
+              <br>
+              <p >
+                <img id="logo_preview_sidebar" ng-src="{{$ctrl.preview_img.sidebar}}" width="130" name="logo_preview" />
+              </p>
             </div>
           </div>
           <div class="form-group clear-me">
@@ -73,7 +81,7 @@
               <div class="pull-left choose-file {{$ctrl.fileReqFooter}}">
                 <span>Upload <i class="fa fa-arrow-up"></i></span>
                 <!-- <input type="file" class="file"> -->
-                <input name="footerImage" id="footerImage" class="file" type="file" file-model="$ctrl.footerImage" onchange="angular.element(this).scope().uploadChange('footer')" accept="image/*" required>
+                <input name="footerImage" id="footerImage" class="file" type="file" file-model="$ctrl.footerImage" onchange="angular.element(this).scope().uploadChange(this,'footer')" accept="image/*" required>
               </div>
             </div>
             <div class="ads-block">
@@ -84,6 +92,10 @@
               </p>
               <span ng-show="$ctrl.publishAdsForm.weblinkFooter.$error.required && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Required</span>
               <span ng-show="$ctrl.publishAdsForm.weblinkFooter.$error.pattern && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Invalid website</span>
+              <br>
+              <p >
+                <img id="logo_preview_footer" ng-src="{{$ctrl.preview_img.footer}}" width="130" name="logo_preview" />
+              </p>
             </div>
           </div>
         </form>
