--- a/app/signUp/testCenter/view.html
+++ b/app/signUp/testCenter/view.html
@@ -23,7 +23,7 @@
         <form class="psignup-form" name="$ctrl.centerForm">
           <div class="form-group">
             <input type="text" class="form-control" name="centerName" placeholder="Center Name" ng-model="$ctrl.centerName" ng-keypress="$ctrl.centerFormInit.centerName = 0" required>
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Name of your treatment center"><i class="fa fa-question-circle-o fa-2x"></i></span>
             <!-- <span ng-show="$ctrl.centerForm.centerName.$error.required && ($ctrl.centerFormInit.centerName===0)" class="help-block">Required</span> -->
 
           </div>
@@ -51,28 +51,28 @@
 
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Website" name="website" ng-model="$ctrl.website" ng-keypress="$ctrl.centerFormInit.website=0" required ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([0-9 a-z]{2,30})?(?:[\.])+([a-z/.]{2,10})$/">
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Weblink of your treatment center"><i class="fa fa-question-circle-o fa-2x"></i></span>
             <!-- <span ng-show="$ctrl.centerForm.website.$error.required && ($ctrl.centerFormInit.website===0)" class="help-block">Required</span>
             <span ng-show="$ctrl.centerForm.website.$error.pattern && ($ctrl.centerFormInit.website===0)" class="help-block">Invalid website</span> -->
 
           </div>
           <div class="form-group">
             <input type="email" class="form-control" name="email" ng-model="$ctrl.email" ng-keypress="$ctrl.centerFormInit.email=0" required placeholder="Contact Email" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Email address to contact your treatment center"><i class="fa fa-question-circle-o fa-2x"></i></span>
             <!-- <span ng-show="$ctrl.centerForm.email.$error.required && ($ctrl.centerFormInit.email===0)" class="help-block">Required</span>
             <span ng-show="$ctrl.centerForm.email.$error.pattern && ($ctrl.centerFormInit.email===0)" class="help-block">Invalid email</span> -->
 
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="phone" ng-model="$ctrl.phone" ng-keypress="$ctrl.centerFormInit.phone=0" required placeholder="Contact Phone no" ng-pattern="/^-?[0-9+]*$/">
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Phone number to reach your treatment center"><i class="fa fa-question-circle-o fa-2x"></i></span>
             <!-- <span ng-show="$ctrl.centerForm.phone.$invalid && ($ctrl.centerFormInit.phone===0)" class="help-block">Invalid phone</span>
             <span ng-show="$ctrl.centerForm.phone.$invalid!='true' && ($ctrl.centerFormInit.phone===0) && $ctrl.phoneErrorTxt!=''" ng-init="$ctrl.phoneErrorTxt=''" class="help-block">{{$ctrl.phoneErrorTxt}}</span> -->
 
           </div>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Address" name="address" ng-model="$ctrl.address" ng-keypress="$ctrl.centerFormInit.address=0" required>
-            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span>
+            <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Please enter the treatment center address"><i class="fa fa-question-circle-o fa-2x"></i></span>
             <!-- <span ng-show="$ctrl.centerForm.address.$invalid && ($ctrl.centerFormInit.address===0)" class="help-block">Required</span> -->
 
           </div>
