updated myprofile cart, modified signup

--- a/app/signUp/optionalFields/view.html
+++ b/app/signUp/optionalFields/view.html
@@ -63,10 +63,8 @@
               <img id="logo_preview" width="120" name="logo_preview" />
               <i class="fa fa-times" ng-show="$ctrl.logoPreview" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteLogo()" aria-hidden="true" tooltip-placement="right" uib-tooltip="Please upload the logo of your company/treatment center"></i>
             </div>
-
-
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload the logo of your company/treatment center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload images of your company/treatment center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
           <div class="form-group clear-me">
@@ -75,11 +73,9 @@
               <span>Upload <i class="fa fa-arrow-up"></i></span>
               <!-- <input type="file" class="file"> -->
               <input name="gallery[]" id="gallery_data" class="file" type="file" file-model="$ctrl.galleryData" onchange="angular.element(this).scope().imagePreviewMulti(this)" multiple="multiple" accept="image/*">
-
             </div>
-
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload images of your treatment center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
 
